sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:5: error: not found: value debut
  debut=0
  ^AlgCocktailSort2:6: error: not found: value fin
  fin=getNombreValeurs-2
  ^AlgCocktailSort2:8: error: not found: value debut
    for(i<-debut to fin){
           ^AlgCocktailSort2:8: error: not found: value fin
    for(i<-debut to fin){
                    ^AlgCocktailSort2:13: error: not found: value fin
    fin-=1
    ^AlgCocktailSort2:14: error: not found: value fin
    for(i<- fin to debut by -1){
            ^AlgCocktailSort2:14: error: not found: value debut
    for(i<- fin to debut by -1){
                   ^AlgCocktailSort2:21: error: not found: value debut
    debut+=1
    ^