sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
  var i:Int=0
  
  debut=0
  fin=getNombreValeurs-2
  do{
    for(i<-debut to fin){
      if(plusPetit(i,i+1)){
        echange(i,i+1)
      }
    }
    fin-=1
    for(i<- fin to debut by -1){
      if(plusPetit(i,i+1)){
        echange(i,i+1)
      }
      
      
    }
    debut+=1
    
    
  }while(i==0)
}